package dp.factory.interfaces;

public interface Getraenk {
    // das abstrakte Produkt "Getraenke"
    void kuehlen();
}
