package dp.factory.interfaces;

public interface Hauptgericht {
    // das abstrakte Produkt "Hauptgericht"
    void warmLiefern();
}
