@startuml
'skinparam groupInheritance 2
hide members
'hide empty fields
'hide circle
'show methods
'show attributes
show methods
hide CLIENT methods
hide CLIENT circle
'skinparam classFontColor automatic
'skinparam classHeaderBackgroundColor #444
'skinparam minClassWidth 100
'skinparam nodesep 50
'skinparam ranksep 100

interface MahlzeitFabrik <<abstract>> #d3dff7;line:blue;line.dotted;text:blue {
{abstract} createGetraenk();
{abstract} createVorspeise();
{abstract} createHauptgericht(); 
}

interface Getraenk <<abstract>> #D1EEE1;line:green;line.dotted;text:green {
{abstract} kuehlen()
}

interface Vorspeise <<abstract>> #D1EEE1;line:green;line.dotted;text:green {
{abstract} schnellVorbereiten()
}

interface Hauptgericht <<abstract>> #D1EEE1;line:green;line.dotted;text:green {
{abstract} warmLiefern()
}


class PizzeriaFabrik implements MahlzeitFabrik {
createGetraenk();
createVorspeise();
createHauptgericht(); 
}

class RestaurantFabrik #feff65 implements MahlzeitFabrik {
createGetraenk();
createVorspeise();
createHauptgericht(); 
}


class Wasser implements Getraenk {
kuehlen()
}

class Saft #feff65 implements Getraenk {
kuehlen()
}

class Salat implements Vorspeise {
schnellVorbereiten()
}

class Suppe #feff65 implements Vorspeise {
schnellVorbereiten()
}

class Pizza implements Hauptgericht {
warmLiefern()
}

class Kartoffelgratin #feff65 implements Hauptgericht {
warmLiefern()
}


class CLIENT #pink;line:red;line.bold;text:red

'PizzeriaFabrik ..|> MahlzeitFabrik
PizzeriaFabrik -[dotted]-> Wasser : <<create>>
PizzeriaFabrik -[dotted]-> Salat : <<create>>
PizzeriaFabrik -[dotted]-> Pizza : <<create>>

'RestaurantFabrik ..|> MahlzeitFabrik
RestaurantFabrik -[dotted]-> Saft : <<create>>
RestaurantFabrik -[dotted]-> Suppe : <<create>>
RestaurantFabrik -[dotted]-> Kartoffelgratin : <<create>>

CLIENT -[dotted]-> MahlzeitFabrik
CLIENT -[dotted]-> Getraenk
CLIENT -[dotted]-> Vorspeise
CLIENT -[dotted]-> Hauptgericht

@enduml
